lang.java.statics.test/tests/packages/class-in-compilation-unit-shadows-on-demand-imported-class.no.spt
module packages/class-in-compilation-unit-shadows-on-demand-imported-class_no

language metaborg-java

test class-in-compilation-unit-shadows-on-demand-imported-class [[

test;



// error: incompatible types\: q\.A cannot be converted to p\.A

[p] {

    [A]
    package p;
    import q.*;
    public class A {
        A a = (q.A) null;
    }

}

[q] {

    [A]
    package q;
    public class A {
    }

}

]] analysis fails
   run javacFails to ""
